kubernetes/apps/network/external-service/arm/endpointslice.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/discovery.k8s.io/endpointslice_v1.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: internal-arm
  labels:
    kubernetes.io/service-name: internal-arm
addressType: IPv4
endpoints:
  - addresses:
      - ${TRUENAS_IP}
ports:
  - port: 30173
    name: http
    protocol: TCP
