kubernetes/apps/network/external-service/arm/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: internal-arm
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 30173
      name: http
