kubernetes/apps/network/external-service/arm/ingress.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: internal-arm
subsets:
  - addresses:
      - ip: ${TRUENAS_IP}
    ports:
      - port: 30173
        name: http
---
apiVersion: v1
kind: Service
metadata:
  name: internal-arm
spec:
  ports:
    - port: 80
      targetPort: 30173
      name: http
  clusterIP: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-ingress-arm
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: internal
  rules:
    - host: arm.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: internal-arm
                port:
                  number: 80
